--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,14 @@
       <artifactId>jmock-junit4</artifactId>
       <version>2.6.0</version>
     </dependency>
+
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>14.0.1</version>
+    </dependency>
+
+
   </dependencies>
 
   <build>
