--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,10 @@
   <name>clouwaypush</name>
   <url>http://maven.apache.org</url>
 
+  <properties>
+    <appengine.version>1.9.4</appengine.version>
+  </properties>
+
   <dependencies>
 
     <!-- GWT -->
@@ -23,24 +27,24 @@
     <dependency>
       <groupId>com.google.appengine</groupId>
       <artifactId>appengine-api-1.0-sdk</artifactId>
-      <version>1.9.2</version>
+      <version>${appengine.version}</version>
     </dependency>
     <dependency>
       <groupId>com.google.appengine</groupId>
       <artifactId>appengine-testing</artifactId>
-      <version>1.9.2</version>
+      <version>${appengine.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.google.appengine</groupId>
       <artifactId>appengine-api-stubs</artifactId>
-      <version>1.9.2</version>
+      <version>${appengine.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.google.appengine</groupId>
       <artifactId>appengine-api-labs</artifactId>
-      <version>1.9.2</version>
+      <version>${appengine.version}</version>
       <scope>test</scope>
     </dependency>
 
