--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,14 @@
 
   <dependencies>
 
+    <!-- JSON Support Libraries-->
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.3</version>
+      <scope>provided</scope>
+    </dependency>
+
     <!-- GWT -->
     <dependency>
       <groupId>com.google.gwt</groupId>
