--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <groupId>com.clouway.push</groupId>
   <artifactId>clouwaypush</artifactId>
   <packaging>jar</packaging>
-  <version>1.0</version>
+  <version>2.0</version>
 
   <name>clouwaypush</name>
   <url>http://maven.apache.org</url>
@@ -24,12 +24,12 @@
       <scope>provided</scope>
     </dependency>
 
-    <!-- GWT -->
     <dependency>
-      <groupId>com.google.gwt</groupId>
-      <artifactId>gwt-user</artifactId>
-      <version>2.7.0</version>
+    	<groupId>javax.servlet</groupId>
+    	<artifactId>servlet-api</artifactId>
+    	<version>2.5</version>
     </dependency>
+
 
     <!-- GAE -->
     <dependency>
@@ -64,11 +64,6 @@
     </dependency>
 
     <!-- Dependency Injection -->
-    <dependency>
-      <groupId>com.google.gwt.inject</groupId>
-      <artifactId>gin</artifactId>
-      <version>2.1.2</version>
-    </dependency>
     <dependency>
       <groupId>com.google.inject</groupId>
       <artifactId>guice</artifactId>
