--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,5 +33,8 @@
     "jasmine-core": "~2.3.4",
     "grunt-cli": "~0.1.13",
     "grunt-injector": "~0.6.1"
+  },
+  "peerDependencies": {
+    "angular": ">=1.4.x"
   }
 }
