--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,11 @@
-apply plugin: 'java'
+apply plugin: "java"
 apply plugin: 'com.bmuschko.nexus'
 apply plugin: 'net.researchgate.release'
+apply plugin: "kotlin"
 
 buildscript {
   ext.gae_version = '1.9.54'
+  ext.kotlin_version = '1.4.10'
   repositories {
     mavenCentral()
     jcenter()
@@ -16,6 +18,7 @@ buildscript {
     classpath "com.google.appengine:gradle-appengine-plugin:$gae_version"
     classpath 'com.bmuschko:gradle-nexus-plugin:2.3.1'
     classpath 'net.researchgate:gradle-release:2.6.0'
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
   }
 }
 
@@ -26,10 +29,11 @@ repositories {
   mavenCentral()
 }
 
-version = '3.0'
+version = '3.1'
 
 dependencies {
-  compile("com.google.appengine:appengine-api-1.0-sdk:$gae_version")
+  compile ("com.google.appengine:appengine-api-1.0-sdk:$gae_version")
+  compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
   compile('com.google.api-client:google-api-client-appengine:1.22.0') {
     exclude module: 'google-api-client-servlet'
@@ -44,7 +48,7 @@ dependencies {
 }
 
 
-version = '3.0'
+version = '3.1'
 group = 'com.clouway.messaging'
 
 modifyPom {
